# py-simple-binary-encoding

./: README.md  pyproject.toml
sbe2/backcheck/: compare.py  errors.py
sbe2/pygen/: __init__.py  render.py  templates.py
sbe2/pygen/templates/: composite.py.j2  enum.py.j2  header.py.j2  set.py.j2
sbe2/schema/: __init__.py  builtin.py  common.py  composite.py  data.py  enum.py  field.py  group.py  message.py  message_schema.py  messages.py  primitive_type.py  ref.py  schema.py  set.py  type.py  types.py
sbe2/xmlparser/: __init__.py  attributes.py  ctx.py  errors.py  types.py
schema/: __init__.py  builtin.py  common.py
tests/test_backcheck/: test_compare.py
tests/test_pygen/: test_render.py
tests/test_schema/: test_common.py  test_composite.py  test_enum.py  test_field.py  test_messages_collection.py  test_primitive_types.py  test_ref.py  test_set.py  test_type.py  test_types_collection.py
tests/test_xmlparser/: test_attributes.py  test_real_schema.py  test_types.py
tests/test_xmlparser/example_schema/: complete.xml
